Finalizando tutorial fetch api

--- a/fetch-api/post.html
+++ b/fetch-api/post.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./style.css" rel="stylesheet" type="text/css">
+    <script src="./script.js" defer></script>
     <title>Post</title>
 </head>
 <body>
@@ -13,7 +14,7 @@
         <a href="index.html">Voltar</a>
         <div id="post-container"></div>
         <h2>Comentários</h2>
-        <form id="coment-form">
+        <form id="comment-form">
             <div>
                 <label for="email">Seu e-mail:</label>
                 <input type="email" name="email" id="email" placeholder="Digite o seu e-mail" required>
@@ -21,17 +22,16 @@
 
             <div>
                 <label for="body">Seu comentário:</label>
-                <textarea name="body" id="body" placeholder="Digite o seu comentário" required>
+                <textarea name="body" id="body" placeholder="Digite o seu comentário" required></textarea>
             </div>
 
-            <input type="submit" value="Enviar">
+            <input type="submit" value="Enviar" />
         </form>
 
         <div id="comments-container">
-            
+
         </div>
     </div>
 
-    <script src="./script.js" defer></script>
 </body>
 </html>
